<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="title_editor_add">Add Inventory Item</string>
    <string name="title_editor_edit">Edit Item</string>

    <!--Edit Activity-->
    <string name="section_title_edit_item">Edit item</string>
    <string name="section_title_stock">Stock</string>
    <string name="section_title_supplier">Supplier</string>
    <string name="button_text_order">order</string>
    <string name="image_select_prompt">Select an image</string>
    <string name="hint_text_name">Enter name</string>
    <string name="hint_text_price">Enter price</string>
    <string name="image_description">item image</string>

    <!--List item-->
    <string name="button_text_sell">sell</string>


    <string name="item_saved_success">Item saved!</string>
    <string name="item_deleted_success">Item deleted</string>

    <!--Error messages-->
    <string name="error_stock_level">Stock level cannot be lower than 0!</string>
    <string name="error_editing_item">Error editing item!</string>
    <string name="error_no_name">You must enter a name</string>
    <string name="error_saving_item">Umm, something went wrong!</string>
    <string name="error_item_deleted">Error deleting item!</string>

    <!--Empty state text-->
    <string name="empty_state_title">Hmm, can\'t find anything here...</string>
    <string name="empty_state_subtitle">Try adding an item</string>

    <string name="email_subject">Need new supplies</string>
    <string name="email_body">I need more things!</string>

    <!--Delete button-->
    <string name="delete_button_message">Delete this item?</string>
    <string name="delete_button_positive">Delete</string>
    <string name="delete_button_negative">Cancel</string>

</resources>
