<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/LabelStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/section_title_edit_item"
            tools:text="Item Name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_text_name"
                android:inputType="textCapWords"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimaryText" />

            <EditText
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_text_price"
                android:inputType="numberDecimal"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimaryText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/section_title_stock"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_decrease"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="-"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/stock_level_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="0"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button_increase"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="+"
                android:textAppearance="?android:textAppearanceLarge" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <TextView
            style="@style/LabelStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/section_title_supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_order"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/button_text_order" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/select_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_description"
            android:src="@drawable/box_select_image" />

        <TextView
            android:id="@+id/select_an_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:text="@string/image_select_prompt"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorSecondaryText" />

    </RelativeLayout>

</LinearLayout>
